<resources>
    <string name="app_name">Midterm 07600527</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>

    <string name="promlert" translatable="false">Promlert Lovichit</string>

    <string name="add_to_story">Add to Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">"Goes To "</string>
    <string name="live_in">"Live in "</string>
    <string name="from">"From "</string>

    <string name="login_fail">Login Failed</string>





    <string name="welcome">"Welcome "</string>
    <string name="login_failed">Invalid username or password</string>


</resources>
